syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.example.shared";

option java_outer_classname = "LocationProto";

service LocationSync {
    rpc syncLocation(stream LocationRequest) returns (stream LocationResponse);
}

message GrpcLocation {
    int32 x = 1;
    int32 y = 2;
}

message LocationRequest {
    GrpcLocation location = 1;
}

message LocationResponse {
    GrpcLocation location = 1;
}
